@@ -27,6 +27,7 @@ Misc:
  - FFmpeg: Encoding cleanup
  - GB Memory: Initialize RAM pattern for GBC
  - GB Video: Improved video timings
+ - All: Split out install locations for Libretro and OpenEmu
 
 0.5.0: (2016-09-19)
 Features:
